Add animation and always show '请让徐任杰多吃'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <div class="food-list">
     <h2>请勾选你想吃的食物：</h2>
-    <!-- 这里用一组checkbox来表示可选食物 -->
+    <!-- 这里仍然列出可选食物，但实际计算会被忽略 -->
     <label>
       <input type="checkbox" class="food-checkbox" data-name="牛肉卷" data-cal="250"> 牛肉卷（250卡/份）
     </label><br/>
